swagger controller path added
